package gameZeldiablo.Zeldiablo.Items;

import gameZeldiablo.Zeldiablo.VariablesGlobales;

/**
 * Arme Epee
 */
public class Epee extends Arme {
    public Epee() {
        super("Épée", VariablesGlobales.SPRITE_EPEE, 2.0); // 2 points de dégâts
    }
}
