package gameZeldiablo.Zeldiablo.Items;

import gameZeldiablo.Zeldiablo.VariablesGlobales;

public class Hache extends Arme {
    public Hache() {
        super("Hache", VariablesGlobales.SPRITE_HACHE, 2.5); // 2.5 points de dégâts
    }
}
