package gameZeldiablo.Zeldiablo.Items;

public class ItemDefault extends Item {
    public ItemDefault() {
        super("Placeholder", "", TypeItem.OBJET);
    }

    public ItemDefault(String name) {
        super(name, "", TypeItem.OBJET);
    }
}
