@startuml diagramme-classes-item

!define ABSTRACT class

abstract class Sprite {
  - imgFile : String
  - img : Image
  + Sprite(s : String)
  + setImg(img : String) : void
  + getImg() : Image
}

abstract class Item {
  - name : String
  - type : TypeItem
  + Item(name : String, img : String, type : TypeItem)
  + getName() : String
  + getType() : TypeItem
  + getParams() : Object[]
  + toString() : String
  + {abstract} getDegat() : double
}

abstract class Case {
  - x : int
  - y : int
 
  + Case(x : int, y : int, couleur : Color, isWalkable : boolean, img : String)
  
  + addItem(item : Item) : void
  + hasItem() : boolean
  + removeItem() : void
  + getItem() : Item
}

enum TypeItem {
  OBJET
  ARME
  MISC
}

class Amulette {
  + Amulette()
  + getDegat() : double
}

abstract class Arme {
  # degat : double
  + Arme(name : String, img : String, degat : double)
  + getDegat() : double
  + toString() : String
}

class Epee {
  + Epee()
}

class Hache {
  + Hache()
}

class Baton {
  + Baton()
}

class Food {
  + Food()
  + use(laby : Labyrinthe) : boolean
  + getDegat() : double
}

class ItemDefault {
  + ItemDefault()
  + ItemDefault(name : String)
  + getDegat() : double
}




class CaseVide {
  + CaseVide(x : int, y : int)
  + addItem(item : Item) : void
  + hasItem() : boolean
  + removeItem() : void
  + getItem() : Item
}

class Player {
  + Player(dx : int, dy : int, maxHp : double, degat : double)
  + setInventory(inventory : ArrayList<Item>) : void
  + getInventory() : ArrayList<Item>
  + possedeItem(nomItem : String) : boolean
}

Item --|> Sprite 
Case --|> Sprite
Amulette --|> Item 
Arme --|> Item
Epee --|> Arme 
Hache --|> Arme
Baton --|> Arme
Food --|> Item
ItemDefault --|> Item
CaseVide --|> Case

Item --> TypeItem : utilise
Case --> Item : utilise

Player --> Item : inventory\n0..*
CaseVide --> Item : item\n0..1

@enduml